fix layout, add git ignore, format reset.css and style.css, add routing for profile

--- a/csdlnc_shopee/Views/Shared/_Layout.cshtml
+++ b/csdlnc_shopee/Views/Shared/_Layout.cshtml
@@ -46,40 +46,32 @@
 <body class="js">
     <form id="form1" runat="server">
         <div>
-            <!-- Preloader -->
-            <div class="preloader">
-                <div class="preloader-inner">
-                    <div class="preloader-icon">
-                        <span></span>
-                        <span></span>
-                    </div>
-                </div>
-            </div>
-            <!-- End Preloader -->
             <!-- Header -->
             <header class="header shop">
                 <!-- Topbar -->
                 <div class="topbar">
                     <div class="container">
                         <div class="row">
-                            <div class="col-lg-4 col-md-12 col-12">
+                            <div class="col-lg-6 col-md-12 col-12">
                                 <!-- Top Left -->
                                 <div class="top-left">
                                     <ul class="list-main">
-                                        <li><i class="ti-headphone-alt"></i>+060 (800) 801-582</li>
-                                        <li><i class="ti-email"></i>support@shophub.com</li>
+                                        <li>Kênh Người Bán</li>
+                                        <li>Tải ứng dụng</li>
+                                        <li>Kết nối</li>
+                                        <li><i class="ti-facebook"></i><i class="ti-instagram"></i></li>
                                     </ul>
                                 </div>
                                 <!--/ End Top Left -->
                             </div>
-                            <div class="col-lg-8 col-md-12 col-12">
+                            <div class="col-lg-6 col-md-12 col-12">
                                 <!-- Top Right -->
                                 <div class="right-content">
                                     <ul class="list-main">
-                                        <li><i class="ti-location-pin"></i>Store location</li>
-                                        <li><i class="ti-alarm-clock"></i><a href="#">Daily deal</a></li>
-                                        <li><i class="ti-user"></i><a href="#">My account</a></li>
-                                        <li><i class="ti-power-off"></i><a href="login.html#">Login</a></li>
+                                        <li><i class="ti-bell"></i>Thông báo</li>
+                                        <li><i class="ti-help-alt"></i><a href="#">Trợ giúp</a></li>
+                                        <li><a href="signup#">Đăng ký</a></li>
+                                        <li><a href="login">Đăng nhập</a></li>
                                     </ul>
                                 </div>
                                 <!-- End Top Right -->
@@ -90,55 +82,34 @@
                 <!-- End Topbar -->
                 <div class="middle-inner">
                     <div class="container">
-                        <div class="row">
-                            <div class="col-lg-2 col-md-2 col-12">
+                        <div class="row d-flex align-items-center">
+                            <div class="col-lg-3 col-md-3 col-12">
                                 <!-- Logo -->
                                 <div class="logo">
-                                    <a href="index.html">
-                                        <img src="Assets/client/images/logo.png" alt="logo">
+                                    <a href="#">
+                                        <img src="https://cf.shopee.vn/file/c8ebfae52b8a127613684cc4f08f285d" alt="logo" class="logo-img">
                                     </a>
                                 </div>
-                                <!--/ End Logo -->
-                                <!-- Search Form -->
-                                <div class="search-top">
-                                    <div class="top-search"><a href="#0"><i class="ti-search"></i></a></div>
-                                    <!-- Search Form -->
-                                    <div class="search-top">
-                                        <form class="search-form">
-                                            <input type="text" placeholder="Search here..." name="search">
-                                            <button value="search" type="submit"><i class="ti-search"></i></button>
-                                        </form>
-                                    </div>
-                                    <!--/ End Search Form -->
-                                </div>
-                                <!--/ End Search Form -->
-                                <div class="mobile-nav"></div>
+                                
                             </div>
-                            <div class="col-lg-8 col-md-7 col-12">
+                            <div class="col-lg-8 col-md-8 col-12">
                                 <div class="search-bar-top">
-                                    <div class="search-bar">
-                                        <select>
-                                            <option selected="selected">All Category</option>
-                                            <option>watch</option>
-                                            <option>mobile</option>
-                                            <option>kid’s item</option>
-                                        </select>
+                                    <div class="search-bar d-flex justify-content-between">
                                         <form>
-                                            <input name="search" placeholder="Search Products Here....." type="search">
+                                            <input name="search" placeholder="Tìm kiếm sản phẩm..." type="search">
                                             <button class="btnn"><i class="ti-search"></i></button>
                                         </form>
                                     </div>
                                 </div>
+
+                                    <div class="more-search">
+                                        <a href="/search?keyword=b%C3%A0n%20ph%C3%ADm%20c%C6%A1">Bàn Phím Cơ</a><a href="/search?keyword=rk918">RK918</a><a href="/search?keyword=corsair%20k70">Corsair K70</a><a href="/search?keyword=b%C3%A0n%20ph%C3%ADm%20c%C6%A1%20dareu">Bàn Phím Cơ Dareu</a><a href="/search?keyword=b%C3%A0n%20ph%C3%ADm">bàn phím</a><a href="/search?keyword=tai%20nghe%20akg">Tai Nghe AKG</a><a href="/search?keyword=b%C3%A0n%20ph%C3%ADm%20c%C6%A1%20mini">Bàn Phím Cơ Mini</a><a href="/search?keyword=b%C3%A0n%20ph%C3%ADm%20game%20th%E1%BB%A7">Bàn Phím Game Thủ</a>
+                                    </div>
                             </div>
-                            <div class="col-lg-2 col-md-3 col-12">
+                            <div class="col-lg-1 col-md-1 col-12">
                                 <div class="right-bar">
                                     <!-- Search Form -->
-                                    <div class="sinlge-bar">
-                                        <a href="#" class="single-icon"><i class="fa fa-heart-o" aria-hidden="true"></i></a>
-                                    </div>
-                                    <div class="sinlge-bar">
-                                        <a href="#" class="single-icon"><i class="fa fa-user-circle-o" aria-hidden="true"></i></a>
-                                    </div>
+                                     
                                     <div class="sinlge-bar shopping">
                                         <a href="#" class="single-icon"><i class="ti-bag"></i><span class="total-count">2</span></a>
                                         <!-- Shopping Item -->
@@ -180,119 +151,7 @@
                         </div>
                     </div>
                 </div>
-                <!-- Header Inner -->
-                <div class="header-inner">
-                    <div class="container">
-                        <div class="cat-nav-head">
-                            <div class="row">
-                                <div class="col-lg-3">
-                                    <div class="all-category">
-                                        <h3 class="cat-heading"><i class="fa fa-bars" aria-hidden="true"></i>CATEGORIES</h3>
-                                        <ul class="main-category">
-                                            <li>
-                                                <a href="#">New Arrivals <i class="fa fa-angle-right" aria-hidden="true"></i></a>
-                                                <ul class="sub-category">
-                                                    <li><a href="#">accessories</a></li>
-                                                    <li><a href="#">best selling</a></li>
-                                                    <li><a href="#">top 100 offer</a></li>
-                                                    <li><a href="#">sunglass</a></li>
-                                                    <li><a href="#">watch</a></li>
-                                                    <li><a href="#">man’s product</a></li>
-                                                    <li><a href="#">ladies</a></li>
-                                                    <li><a href="#">westrn dress</a></li>
-                                                    <li><a href="#">denim </a></li>
-                                                </ul>
-                                            </li>
-                                            <li class="main-mega">
-                                                <a href="#">best selling <i class="fa fa-angle-right" aria-hidden="true"></i></a>
-                                                <ul class="mega-menu">
-                                                    <li class="single-menu">
-                                                        <a href="#" class="title-link">Shop Kid's</a>
-                                                        <div class="image">
-                                                            <img src="https://via.placeholder.com/225x155" alt="#">
-                                                        </div>
-                                                        <div class="inner-link">
-                                                            <a href="#">Kids Toys</a>
-                                                            <a href="#">Kids Travel Car</a>
-                                                            <a href="#">Kids Color Shape</a>
-                                                            <a href="#">Kids Tent</a>
-                                                        </div>
-                                                    </li>
-                                                    <li class="single-menu">
-                                                        <a href="#" class="title-link">Shop Men's</a>
-                                                        <div class="image">
-                                                            <img src="https://via.placeholder.com/225x155" alt="#">
-                                                        </div>
-                                                        <div class="inner-link">
-                                                            <a href="#">Watch</a>
-                                                            <a href="#">T-shirt</a>
-                                                            <a href="#">Hoodies</a>
-                                                            <a href="#">Formal Pant</a>
-                                                        </div>
-                                                    </li>
-                                                    <li class="single-menu">
-                                                        <a href="#" class="title-link">Shop Women's</a>
-                                                        <div class="image">
-                                                            <img src="https://via.placeholder.com/225x155" alt="#">
-                                                        </div>
-                                                        <div class="inner-link">
-                                                            <a href="#">Ladies Shirt</a>
-                                                            <a href="#">Ladies Frog</a>
-                                                            <a href="#">Ladies Sun Glass</a>
-                                                            <a href="#">Ladies Watch</a>
-                                                        </div>
-                                                    </li>
-                                                </ul>
-                                            </li>
-                                            <li><a href="#">accessories</a></li>
-                                            <li><a href="#">top 100 offer</a></li>
-                                            <li><a href="#">sunglass</a></li>
-                                            <li><a href="#">watch</a></li>
-                                            <li><a href="#">man’s product</a></li>
-                                            <li><a href="#">ladies</a></li>
-                                            <li><a href="#">westrn dress</a></li>
-                                            <li><a href="#">denim </a></li>
-                                        </ul>
-                                    </div>
-                                </div>
-                                <div class="col-lg-9 col-12">
-                                    <div class="menu-area">
-                                        <!-- Main Menu -->
-                                        <nav class="navbar navbar-expand-lg">
-                                            <div class="navbar-collapse">
-                                                <div class="nav-inner">
-                                                    <ul class="nav main-menu menu navbar-nav">
-                                                        <li class="active"><a href="#">Home</a></li>
-                                                        <li><a href="#">Product</a></li>
-                                                        <li><a href="#">Service</a></li>
-                                                        <li>
-                                                            <a href="#">Shop<i class="ti-angle-down"></i><span class="new">New</span></a>
-                                                            <ul class="dropdown">
-                                                                <li><a href="shop-grid.html">Shop Grid</a></li>
-                                                                <li><a href="cart.html">Cart</a></li>
-                                                                <li><a href="checkout.html">Checkout</a></li>
-                                                            </ul>
-                                                        </li>
-                                                        <li><a href="#">Pages</a></li>
-                                                        <li>
-                                                            <a href="#">Blog<i class="ti-angle-down"></i></a>
-                                                            <ul class="dropdown">
-                                                                <li><a href="blog-single-sidebar.html">Blog Single Sidebar</a></li>
-                                                            </ul>
-                                                        </li>
-                                                        <li><a href="contact.html">Contact Us</a></li>
-                                                    </ul>
-                                                </div>
-                                            </div>
-                                        </nav>
-                                        <!--/ End Main Menu -->
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!--/ End Header Inner -->
+
             </header>
             <!--/ End Header -->
             @RenderBody()
