--- a/csdlnc_shopee/Views/Home/ProductDetail.cshtml
+++ b/csdlnc_shopee/Views/Home/ProductDetail.cshtml
@@ -340,7 +340,7 @@
                         </div>
 
                         <ul class="markers">
-                            <li data-marker="1" class="active"><img src="@Model.TENHANGHOA" alt="" /></li>
+                            <li data-marker="1" class="active"><img src="@Model.HINHANH" alt="" /></li>
                             @*<li data-marker="2"><img src="../assets/img/product/2.jpg" alt="Background" /></li>
                                 <li data-marker="3"><img src="../assets/img/product/3.jpg" alt="Background" /></li>
                                 <li data-marker="4"><img src="../assets/img/product/4.jpg" alt="Background" /></li>
@@ -359,6 +359,8 @@
                     <p> &middot; Intel HD Graphics</p>
 
                     <p class="price">VND @Model.GIATHANH</p>
+                    <br />
+                    <a href="/Shop/Shop?productID=@Model.MAHANGHOA">Go to shop</a>
                     @*<p class="price through">$249.99</p>*@
                     <br><br>
 
